2009-09-07  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Selection.cs: Added constructor.

2009-09-07  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Caret.cs:
	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/LineSegment.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/ClipboardActions.cs: Overworked coordinate
	  translation. fixed some bugs with folding coordinate
	  translation. Refactored getvisualcolumn helper method.

2009-09-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ISearchEngine.cs: Support case-insensitive
	  search in the regex search.

2009-09-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed memory leak.

2009-09-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs: Fixed possible memory
	  issue.

2009-09-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed repaint problem.

2009-09-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Implemented update queue -
	  this should solve the speed problems.

2009-09-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextViewMargin.cs: Don't update bracket
	  highlighting in atomic undo.

2009-09-03  Christian Hergert  <chris@dronelabs.com>

	* Mono.TextEditor/TextViewMargin.cs: Make sure that the
	caret is clipped to the visible region of the Gdk.Drawable.
	This fixes a rendering issue on OS X where the cursor could
	be drawn outside of the TextView.

2009-09-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/FoldActions.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs: Fold actions now re
	  calculate the vertical scrollbar.

2009-09-03  Christian Hergert  <chris@dronelabs.com>

	* Mono.TextEditor/TextEditor.cs: Do not write directly to